devops/chart/templates/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartpaper-api-ingress
  namespace: apps 
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - tools.ashudev.in
      secretName: tools-tls
  rules:
    - host: tools.ashudev.in
      http:
        paths:
          - path: /chartpaper/api
            pathType: Prefix
            backend:
              service:
                name: chart-paper-server
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartpaper-ui-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - tools.ashudev.in
      secretName: tools-tls
  rules:
    - host: tools.ashudev.in
      http:
        paths:
          - path: /chartpaper
            pathType: Prefix
            backend:
              service:
                name: chart-paper-ui
                port:
                  number: 80
